fixed css so it works on mobile

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -29,9 +29,10 @@ html, body {
 }
 
 .note-title {
-  height: 50px;
-  margin-top: 13px;
+  height: 20vh;
+  margin-top: 10px;
   font-size: 3rem;
+  margin-bottom: 10px;
 }
 
 .note-title:read-only, .note-textarea:read-only {
